--- a/.travis.yml
+++ b/.travis.yml
@@ -2,38 +2,10 @@
 language: python
 sudo: false
 cache: pip
-matrix:
-  exclude:
-    - python: "3.3"
-      env: DJANGO=">=1.9,<1.10" DRF=">=3.3,<3.4"
-    - python: "3.3"
-      env: DJANGO=">=1.9,<1.10" DRF=">=3.4,<3.5"
-    - python: "3.3"
-      env: DJANGO=">=1.10,<1.11" DRF=">=3.4,<3.5"
 python:
-  - "2.7"
-  - "3.3"
-  - "3.4"
   - "3.5"
-env:
-  - DJANGO=">=1.8,<1.9" DRF=">=3.1,<3.2"
-  - DJANGO=">=1.8,<1.9" DRF=">=3.2,<3.3"
-  - DJANGO=">=1.8,<1.9" DRF=">=3.3,<3.4"
-  - DJANGO=">=1.8,<1.9" DRF=">=3.4,<3.5"
-
-  - DJANGO=">=1.9,<1.10" DRF=">=3.3,<3.4"
-  - DJANGO=">=1.9,<1.10" DRF=">=3.4,<3.5"
-
-  - DJANGO=">=1.10,<1.11" DRF=">=3.4,<3.5"
-before_install:
-  # Force an upgrade of py & pytest to avoid VersionConflict
-  - pip install --upgrade py
-  - pip install "pytest>=2.8,<3"
-  - pip install codecov
+  - "3.6"
 install:
-  - pip install Django${DJANGO} djangorestframework${DRF}
-  - python setup.py install
+  - pip install -r requirements-development.txt
 script:
-  - coverage run setup.py -v test
-after_success:
-  - codecov
+  - tox
