--- a/tox.ini
+++ b/tox.ini
@@ -1,18 +1,18 @@
 [tox]
 envlist =
-    py{27,33,34,35}-django18-drf{31,32,33,34},
-    py{27,34,35}-django19-drf{33,34},
-    py{27,34,35}-django110-drf{34},
+    py{35,36}-django18-drf{34,35},
+    py{35,36}-django19-drf{34,35},
+    py{35,36}-django110-drf{34,35},
+    py{35,36}-django111-drf{34,35},
 
 [testenv]
 deps =
     django18: Django>=1.8,<1.9
     django19: Django>=1.9,<1.10
     django110: Django>=1.10,<1.11
-    drf31: djangorestframework>=3.1,<3.2
-    drf32: djangorestframework>=3.2,<3.3
-    drf33: djangorestframework>=3.3,<3.4
+    django111: Django>=1.11,<1.12
     drf34: djangorestframework>=3.4,<3.5
+    drf35: djangorestframework>=3.5,<3.6
 
 setenv =
     PYTHONPATH = {toxinidir}
